# watermark-removal

./: .gitignore  Makefile  README.md
apps/: README.md  pyproject.toml
apps/tests/: test_core.py
apps/watermark_remover/: __init__.py  cli.py  core.py
logs/: status.tsv
logs/strapi-upload-reports/: strapi-upload-report-2026-06-26T04-51-51-556Z.csv  strapi-upload-report-2026-06-26T04-51-51-556Z.md  strapi-upload-report-2026-06-26T08-40-12-528Z.csv  strapi-upload-report-2026-06-26T08-40-12-528Z.md
rules/: [NOTES] office-image-watermark-removal-and-delivery-report.md  strapi-office-venue-existing-filenames.txt
scripts/: batch-remove.sh  continue-progress.sh  link-strapi-office-venue-images.mjs  progress-run.sh  retry-failed.sh  status-log.py  upload-strapi-images.mjs
