[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watermark-remover"
version = "0.1.0"
description = "Authorized-use image watermark/object removal CLI using mask-based inpainting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "openai>=2.0",
  "opencv-python>=4.8",
  "Pillow>=10.0",
]

[project.scripts]
watermark-remover = "watermark_remover.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["watermark_remover"]
